package edu.austral.dissis.chess.board

data class Coordinate(val row: Int, val column: Int) {}
