package edu.austral.dissis.chess.piece

enum class Team {
    WHITE,
    BLACK
}
