package edu.austral.dissis.chess.result.action

sealed interface Action
