package edu.austral.dissis.chess.result.move

sealed interface MoveResult {}
