package edu.austral.dissis.chess.result.rule

sealed interface RuleResult
