package edu.austral.dissis.chess.result.rule

object ValidResult: RuleResult
